Fixes casestudy cta overlapping issue for ios

--- a/src/components/Showcase/Scene.scss
+++ b/src/components/Showcase/Scene.scss
@@ -128,22 +128,29 @@ html {
 .scene__link {
   color: $white;
   position: relative;
-  padding: 4rem 0 6rem;
+  margin: 2rem 0 6rem;
+  padding-bottom: 2rem;
+  // media queries
+  @include breakpoint($tablet-sm) {
+    margin-bottom: 9rem;
+  }
+  @include breakpoint($mobile-lg) {
+    margin-top: 1rem;
+    padding-bottom: 1.5rem;
+  }
 
   &:after {
     content: '';
     position: absolute;
-    bottom: 4.3rem;
+    bottom: 0;
     height: 0.2rem;
     background: $white;
-
     display: block;
     width: 5rem;
     // media queries
     @include breakpoint($tablet-sm) {
       height: 0.1rem;
       left: 2.5rem;
-      bottom: 4.8rem;
     }
   }
 }
